# 2023-otus-cpp-base

./: .gitignore  README.md  test.txt
homework_02/: example.cpp  hello_world.cpp  move_me_out.cpp
homework_03/: CMakeLists.txt  scores.csv
homework_03/src/: CMakeLists.txt  game_service.cpp  game_service.h  guess_number_game.cpp  introduction_service.cpp  introduction_service.h  scores_service.cpp  scores_service.h
homework_04/: CMakeLists.txt
homework_04/include/: add.hpp  divide.hpp  multiply.hpp  sub.hpp  variable.hpp
homework_04/src/: parser.cpp
homework_05/: CMakeLists.txt
homework_05/src/: max_statistics.cpp  max_statistics.hpp  mean_statistics.cpp  mean_statistics.hpp  min_statistics.cpp  min_statistics.hpp  statistics_main.cpp  std_statistics.cpp  std_statistics.hpp
